deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jade-security
  labels:
    name: jade-security
    creator: "kollár-sándor"
